# ADNI-preprocess

./: .gitignore  README.md  pyproject.toml
scripts/: adnc_match.py  bids_convert.py  check_bids_json.py  ge_match.py  get_cn_subjects.py  get_matched_cn.py  get_tr.py  meta_match.py  philips_match.py
