[project]
name = "fmri"
version = "0.1.0"
description = ""
authors = [
    {name = "morris"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dicom2nifti (>=2.6.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
